<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="tv.nomercy.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="tv.nomercy.app.Search"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_libraries"
        android:name="tv.nomercy.app.Libraries"
        android:label="@string/title_libraries"
        tools:layout="@layout/fragment_libraries" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="tv.nomercy.app.Music"
        android:label="@string/title_music"
        tools:layout="@layout/fragment_music" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="tv.nomercy.app.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="tv.nomercy.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>